@startuml
skinparam monochrome true
' skinparam classAttributeFontName Cambria
' skinparam classAttributeFontSize 13

class Tools{
  +CalculateRMSE()
  +TransformEstimationVector()
  +MapRadarPolarToCartesianPosition()
  +SubtractAndNormalize()
  +NormalizeAngle()
}
class SensorConfig{
  +GetH() : Eigen::MatrixXd&
  +GetR() : Eigen::MatrixXd&
  --
  -H_ Eigen::MatrixXd 
  -R_ Eigen::MatrixXd 
  -is_linear_ : bool
}
class UKF{
  +ProcessMeasurement() : void
  +GetX() : const Eigen::VectorXd
  +GetNIS() : const double
--
  -Xsig_pred_ : SigmaPoints
  -x_ : Eigen::VectorXd 
  -P_ : Eigen::MatrixXd 
  
  -Zsig_ : Eigen::MatrixXd 
  -z_pred_ : Eigen::VectorXd
  -I_ : Eigen::MatrixXd 

  -n_x_ : const size_t
  -n_aug_ : constexpr size_t
  -lambda_ : constexpr double 
  
  -usedSensors_ : enum UseSensor
  -weights_ : Eigen::VectorXd
  
  -NIS_ : double
--
  -getDeltaTime() : double
  -hFuncRadar() : Eigen::VectorXd
  -prediction() : void
  -predictRadarMeasurement() : void
  -predictMeanAndCovariance() : void
  -updateLidar() : void
  -updateRadar() : void
  
  -initalize() : void
  -initalizeWeights() : void
  -initalizeMatrices() : void
}
class SigmaPoints{
 +predictSigmaPoints() : void
 +Get() : Eigen::MatrixXd&
 --
 -Xsig_pred_ : Eigen::MatrixXd
 -n_aug_ : size_t
 -n_x_ : size_t
 -std_a_ : double
 -std_yawdd_ : double
 -lambda_ : double
 --
 -generateSigmaPoints() : Eigen::MatrixXd
 -predictSigmaPointColumn() : Eigen::VectorXd
 
}

class Data{
 SensorType : enum
 values : VectorXd 
}

class TestDataFileHandler{ 
 +check_files() : bool
 +read_file() : void
 +write_to_file() : void
}
class PlotData{ 
 +addPoint() : void
 +getAllX() const : std::vector<double>
 +getAllY() const : std::vector<double>
 +getTitle() const : std::string 
}
SensorConfig *-- UKF
SigmaPoints *-- UKF
Tools *-- UKF
Data <|-- MeasurementPackage
Data <|-- GroundTruthPackage
MeasurementPackage .. UKF
MeasurementPackage .. TestDataFileHandler
GroundTruthPackage .. TestDataFileHandler
@enduml